# VanGoghDeployer

./: .gitignore  README.md
VanGoghDeployer/: CMakeLists.txt  VanGoghDeployer.cpp  VanGoghDeployer.h
VanGoghDeployer/libs/: ssh.lib
